--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html>
-<html>
-    
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cuso de Git e GitHub</title>
+</head>
+<body>
+    <h1>Minha pagina inicial</h1>
+</body>
 </html>
